fix(loading): fix white flash in dark mode

--- a/static/less/base.less
+++ b/static/less/base.less
@@ -30,6 +30,13 @@ body {
   -moz-osx-font-smoothing: grayscale;
   overflow-x: hidden;
   min-height: 100vh;
+
+  @media (prefers-color-scheme: dark) {
+    // surface100
+    background-color: #18121c;
+    // gray400
+    color: #d6d0dc;
+  }
 }
 
 h1,
